--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -53,16 +53,16 @@
         </div>  
         
         <div class="resultado-desafio">
-            <h1><a href="https://api-fruitlibrary.herokuapp.com/api_root">Api desenvolvida</a></h1>
-            <p>Consultas gerais (GET) ou criação de elementos (PUT):</p>
-            <ul>
-              <li><a class="link-api" href="{% url 'region_list' %}">{% url 'region_list' %}</a>   para regiões</li>
-              <li><a href="{% url 'fruit_list' %}">{% url 'fruit_list' %}</a>   para frutas</li>
-            </ul>
-            <p>Consulta (GET), atualização (UPDATE) ou exclusão (DELETE) de elementos específicos:</p><br/>
-            <ul>
-              <li><a href="{% url 'region_list' %}">{% url 'region_list' %}id</a>   para regiões</li>
-              <li><a href="{% url 'fruit_list' %}">{% url 'fruit_list' %}id</a>   para frutas</li>
+          <h1><a href="https://api-fruitlibrary.herokuapp.com/api">Api desenvolvida</a></h1>
+          <p>Consultas gerais (GET) ou criação de elementos (PUT):</p>
+          <ul>
+            <li><a href="https://api-fruitlibrary.herokuapp.com/api/regions">/api/regions/</a>   para regiões</li>
+            <li><a href="https://api-fruitlibrary.herokuapp.com/api/fruits">/api/fruits/</a>   para frutas</li>
+          </ul>
+          <p>Consulta (GET), atualização (UPDATE) ou exclusão (DELETE) de elementos específicos:</p><br/>
+          <ul>
+            <li><a href="https://api-fruitlibrary.herokuapp.com/api/regions">/api/regions/{id}</a>   para regiões</li>
+            <li><a href="https://api-fruitlibrary.herokuapp.com/api/fruits">/api/fruits/{id}</a>   para frutas</li>
             </ul>
         </div>
 
