corrige link no html

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -22,7 +22,7 @@
         <a class ="hvr-grow" href="https://api-fruitlibrary.herokuapp.com/">Início</a>
       </div>
       <div class="cabecalho-menu-item">
-        <a class ="hvr-grow" href="https://api-fruitlibrary.herokuapp.com/api_root">API</a>
+        <a class ="hvr-grow" href="https://api-fruitlibrary.herokuapp.com/api">API</a>
       </div>
       <div class="cabecalho-menu-item">  
         <a  class ="hvr-grow" href="https://github.com/amandacbarreto/fruitlibrary-api.git">Repositório Github</a>
